node/2-containers-1-domain/k8s/nodeapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
spec:
  type: NodePort
  selector:
    app: node-api
  ports:
  - port: 5000
    targetPort: 5000
